# profile.mobile.apps.native.sticker-panel

./: CMakeLists.txt  project.config  sticker-panel.include  sticker-panel.manifest  sticker-panel.pc.in
doc/: sticker_panel_doc.h
include/: conf.h  conformant.h  db.h  gesture.h  grid.h  group_icon_info.h  icon_info.h  log.h  naviframe.h  page.h  scroller.h  setting.h  sticker_panel.h  sticker_panel_internal.h  toolbar.h  ui_manager.h
packaging/: .sticker-panel.spec.swp  sticker-panel.spec
res/: CMakeLists.txt
res/edje/: item.edc  layout.edc  page.edc  setting.edc
sample/: .CMakeLists.txt.swp  .sample.c.swp  CMakeLists.txt  sample.c  sample.edc  sample.h  sticker_icon.c  sticker_icon.h
src/: .sticker_panel.c.swp  conformant.c  db.c  gesture.c  grid.c  group_icon_info.c  icon_info.c  naviframe.c  page.c  scroller.c  setting.c  sticker_panel.c  toolbar.c  ui_manager.c
